--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
         <meta name="viewport" content="Width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="home.css">
+        <link rel="shortcur icon" href="logo-icone.ico" />
         <title>JL - Host</title>
     </head>
 
